# learn_opengl

./: .gitignore  CMakeLists.txt
exe/: CMakeLists.txt  HelloRectangle.cpp  HelloShaders.cpp  HelloTriangle.cpp  HelloUniforms.cpp  main.cpp
include/: Shaders.hpp
shaders/: HelloShaders.frag  HelloShaders.vert  HelloUniforms.frag  HelloUniforms.vert  OrangeFragmentShader.frag
src/: Shaders.cpp  Util.cpp
test/: CMakeLists.txt  ShadersTests.cpp
